# netmon-plugins

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  netmon-plugins.code-workspace  plugin_list.txt
.github/workflows/: ci.yml
automation/: README.md
automation/ci/: Jenkinsfile
automation/docker/: Dockerfile
config/: README.md  netmon-plugins.conf.example  plugins.defaults.conf.example
deployment/: README.md
deployment/icinga2/: commands-netmon.conf.example
deployment/nagios/: commands.cfg.example
deployment/prometheus/: netmon-exporter.sh
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md  platform-limitations.md
docs/development/: README.md
docs/examples/: README.md
docs/getting-started/: README.md
docs/installation/: README.md
docs/plugin-reference/: README.md
docs/troubleshooting/: README.md
include/netmon/: dependency_check.hpp  http_api.hpp  json_utils.hpp  ntp_client.hpp  plugin.hpp
packaging/: README.md
packaging/linux/: README.md  postinst.sh  postrm.sh
packaging/macos/: README.md
packaging/windows/: README.md
plugins/activemq/: check_activemq.cpp
plugins/apache/: check_apache.cpp
plugins/apt/: check_apt.cpp
plugins/by_ssh/: check_by_ssh.cpp
plugins/cassandra/: check_cassandra.cpp
plugins/ceph/: check_ceph.cpp
plugins/cluster/: check_cluster.cpp
plugins/consul/: check_consul.cpp
plugins/couchbase/: check_couchbase.cpp
plugins/dbi/: check_dbi.cpp
plugins/dhcp/: check_dhcp.cpp
plugins/dig/: check_dig.cpp
plugins/disk/: check_disk.cpp
plugins/dns/: check_dns.cpp
plugins/docker/: check_docker.cpp
plugins/dummy/: check_dummy.cpp
plugins/elasticsearch/: check_elasticsearch.cpp
plugins/etcd/: check_etcd.cpp
plugins/file_age/: check_file_age.cpp
plugins/file_count/: check_file_count.cpp
plugins/file_size/: check_file_size.cpp
plugins/fping/: check_fping.cpp
plugins/ftp/: check_ftp.cpp
plugins/game/: check_game.cpp
plugins/grafana/: check_grafana.cpp
plugins/hpjd/: check_hpjd.cpp
plugins/http/: check_http.cpp
plugins/ide_smart/: check_ide_smart.cpp
plugins/imap/: check_imap.cpp
plugins/influxdb/: check_influxdb.cpp
plugins/ircd/: check_ircd.cpp
plugins/jabber/: check_jabber.cpp
plugins/kafka/: check_kafka.cpp
plugins/kubernetes/: check_kubernetes.cpp
plugins/ldap/: check_ldap.cpp
plugins/load/: check_load.cpp
plugins/log/: check_log.cpp
plugins/memcached/: check_memcached.cpp
plugins/mongodb/: check_mongodb.cpp
plugins/mrtg/: check_mrtg.cpp
plugins/mrtgtraf/: check_mrtgtraf.cpp
plugins/mysql/: check_mysql.cpp
plugins/mysql_query/: check_mysql_query.cpp
plugins/negate/: check_negate.cpp
plugins/nntp/: check_nntp.cpp
plugins/nomad/: check_nomad.cpp
plugins/nt/: check_nt.cpp
plugins/ntp/: check_ntp.cpp
plugins/ntp_peer/: check_ntp_peer.cpp
plugins/ntp_time/: check_ntp_time.cpp
plugins/nwstat/: check_nwstat.cpp
plugins/overcr/: check_overcr.cpp
plugins/pgsql/: check_pgsql.cpp
plugins/phpfpm/: check_phpfpm.cpp
plugins/ping/: check_ping.cpp
plugins/pop/: check_pop.cpp
plugins/procs/: check_procs.cpp
plugins/prometheus/: check_prometheus.cpp
plugins/rabbitmq/: check_rabbitmq.cpp
plugins/radius/: check_radius.cpp
plugins/real/: check_real.cpp
plugins/redis/: check_redis.cpp
plugins/rpc/: check_rpc.cpp
plugins/sensors/: check_sensors.cpp
plugins/sip/: check_sip.cpp
plugins/smtp/: check_smtp.cpp
plugins/snmp/: check_snmp.cpp
plugins/solr/: check_solr.cpp
plugins/ssh/: check_ssh.cpp
plugins/ssl_validity/: check_ssl_validity.cpp
plugins/swap/: check_swap.cpp
plugins/tcp/: check_tcp.cpp
plugins/telnet/: check_telnet.cpp
plugins/time/: check_time.cpp
plugins/udp/: check_udp.cpp
plugins/ups/: check_ups.cpp
plugins/uptime/: check_uptime.cpp
plugins/users/: check_users.cpp
plugins/vault/: check_vault.cpp
plugins/zookeeper/: check_zookeeper.cpp
project/: COMBINED_PLUGIN_ANALYSIS.md  FEATURE_AUDIT.md  IMPLEMENTATION_SUMMARY.md  NAGIOS_PLUGIN_ANALYSIS.md  PLUGIN_ANALYSIS_OVERVIEW.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  README.md  ROADMAP_CHECKLIST.md  VENDOR_DEPENDENCIES.md  ZABBIX_PLUGIN_ANALYSIS.md
scripts/: README.md  download_third_party.ps1  download_third_party.sh  download_vendor.ps1  download_vendor.sh
src/common/: dependency_check.cpp  http_api.cpp  json_utils.cpp  ntp_client.cpp  plugin.cpp
tests/: CMakeLists.txt  main.cpp
tests/integration/: test_plugins.cpp
tests/unit/: test_json_utils.cpp  test_ntp_client.cpp  test_plugin.cpp
tools/: README.md  list-plugins.sh  run-check.sh  validate-build.sh
vendors/: CMakeLists.txt  README.md
